--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "Framework MVC inspirado en Laravel con NodeWire (similar a Livewire)",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "lib/public"
+  ],
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "prepublishOnly": "npm run build"
   },
-  "keywords": ["framework", "mvc", "nodewire", "typescript", "node"],
+  "keywords": ["framework", "mvc", "nodewire", "typescript", "node", "livewire"],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -21,8 +25,6 @@
     "@types/ejs": "^3.1.2",
     "@types/node": "^20.5.0",
     "@types/uuid": "^9.0.0",
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0"
+    "typescript": "^5.1.6"
   }
 }
-
