--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "ejs": "^3.1.9",
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
     "uuid": "^9.0.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/ejs": "^3.1.2",
+    "@types/express-handlebars": "^3.1.0",
     "@types/node": "^20.5.0",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.8",
